added img and og tags

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" type="text/css" href="styles/album.css">
     <link rel="stylesheet" type="text/css" href="styles/player-bar.css">
     <link rel="stylesheet" type="text/css" href="styles/song-list.css">
+
+    <meta property='og:image' content="assets/images/bloc_jams_static.png" />
+    <meta property="og:description" content="Bloc Jams is a responsive music web media player built with jQuery." />
+    
   </head>
   <body>
     <!-- Top bar -->
